Task-58612: [Accessibility - Contrast C3.2 - Stream Page] Fix contrast problem for all "little" texts

--- a/kudos-webapps/src/main/webapp/css/main.less
+++ b/kudos-webapps/src/main/webapp/css/main.less
@@ -186,7 +186,7 @@
 }
 
 .uiIconKudos.uiIconLightGrey {
-  color: #c6c6c6 !important;
+  color: #767676 !important;
 }
 .uiIconKudosCheck.uiIconBlue {
   color: @tertiaryColor !important;
